traces/bug_665.txt
src/medit/stream.c:929: error: DEAD_STORE
  The value written to &ret (type int) is never used.
Showing all 1 steps of the trace


src/medit/stream.c:929:11: Write of unused value
927.         else
928.           for (k=1; k<=2*st->nbstl; k+=2) {
929.             ret = fscanf(in,"%f %f\n",&x,&y);
                 ^
930.             st->listp[k]   = x - mesh->xtra;
931.             st->listp[k+1] = y - mesh->ytra;
